// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`minimal configuration 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"0.0.0\\",
      \\"stackName\\": \\"test.tf.json\\"
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"foo\\"
      }
    ]
  }
}"
`;

exports[`with alias 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"0.0.0\\",
      \\"stackName\\": \\"test.tf.json\\"
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"foo\\"
      },
      {
        \\"access_key\\": \\"bar\\",
        \\"alias\\": \\"route53\\"
      }
    ]
  }
}"
`;

exports[`with generator metadata 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"0.0.0\\",
      \\"stackName\\": \\"test.tf.json\\"
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": \\"~> 2.0\\"
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {}
    ]
  }
}"
`;
